Test #2 for Safari z-index issue.

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,8 +7,8 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
-  z-index: 9999;
   border-bottom: 1px solid #bbb;
+  z-index: 9999;
 }
 
 .navWrapper {
@@ -99,7 +99,7 @@
     top: 1.5rem;
     right: 3rem;
     cursor: pointer;
-    z-index: 100;
+    z-index: 999;
     display: block !important;
     width: 2.5rem !important;
     height: 2.5rem !important;
@@ -120,6 +120,7 @@
     box-shadow: none;
     transform: translateX(100%);
     background-color: rgba(255, 255, 255, 0.9);
+    z-index: 500;
   }
 
   .mobile .item.nav {
